mpdecision is back
Change-Id: I80cceac8604cc293349dc169eb728f2fbebae699

--- a/configs/init.find7op.rc
+++ b/configs/init.find7op.rc
@@ -25,3 +25,9 @@ on init
     chmod 666 /sys/module/snd_soc_wcd9320/parameters/high_perf_mode
     write /sys/module/snd_soc_wcd9320/parameters/high_perf_mode 1
     chmod 444 /sys/module/snd_soc_wcd9320/parameters/high_perf_mode
+
+service mpdecision /system/vendor/bin/mpdecision --avg_comp
+    class main
+    user root
+    group root readproc
+    disabled
