--- a/configs/init.find7op.rc
+++ b/configs/init.find7op.rc
@@ -20,3 +20,8 @@ import init.qcom.power.rc
 on init
     # NXP HAL expects /dev/pn54x
     symlink /dev/pn544 /dev/pn54x
+
+# wcd9320 high performace mode
+    chmod 666 /sys/module/snd_soc_wcd9320/parameters/high_perf_mode
+    write /sys/module/snd_soc_wcd9320/parameters/high_perf_mode 1
+    chmod 444 /sys/module/snd_soc_wcd9320/parameters/high_perf_mode
