--- a/configs/init.find7op.power.rc
+++ b/configs/init.find7op.power.rc
@@ -1,5 +1,5 @@
 on early-init
-    setprop sys.io.scheduler noop
+    setprop sys.io.scheduler maple
     write /sys/block/mmcblk0/bdi/read_ahead_kb 512
     write /sys/class/mmc_host/mmc0/clk_scaling/scale_down_in_low_wr_load 1
 
@@ -43,6 +43,14 @@ on enable-low-power
     write /sys/kernel/cpu_input_boost/ib_freqs "1190400 1497600"
     write /sys/kernel/cpu_input_boost/ib_duration_ms 1400
     write /sys/kernel/cpu_input_boost/enabled 1
+    
+    # FSadino tweaks
+    write /sys/module/cpu_boost/parameters/input_boost_ms 40
+    write /sys/module/cpu_boost/parameters/input_boost_freq 0:1420800 1:1420800 2:1420800 3:1420800
+    write /sys/module/cpu_boost/parameters/hotplug_boost Y
+    write /sys/module/cpu_boost/parameters/wakeup_boost Y
+    write /sys/block/mmcblk0/queue/scheduler maple
+    write /sys/module/lowmemorykiller/parameters/minfree 4096,8192,16384,32768,49152,65536
 
     write /sys/kernel/msm_thermal/enabled 0
     write /sys/kernel/msm_thermal/zone0 "1728000 39 38"
@@ -58,7 +66,7 @@ on enable-low-power
 
     start mpdecision
 
-    setprop sys.io.scheduler cfq
+    setprop sys.io.scheduler maple
 
 on charger
     write /sys/module/lpm_levels/enable_low_power/l2 2
@@ -187,4 +195,4 @@ on property:sys.perf.profile=2
     write /sys/kernel/msm_thermal/zone6 "960000 69 67"
     write /sys/kernel/msm_thermal/zone7 "729600 80 76"
     write /sys/kernel/msm_thermal/sampling_ms 1000
-write /sys/kernel/msm_thermal/enabled 1
+    write /sys/kernel/msm_thermal/enabled 1
